--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# local configuration files
+/Users/jicapone/GitHub/RATIR-GSFC/code/reduction/ratauto/pipeautoproc.par
+
 # sandbox directory
 sandbox
 
